[package]
name = "honeypot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
reqwest = { version = "0.12.20", features = ["json", "rustls-tls"] }
uuid = { version = "1.17.0", features = ["v4"] }
dotenv = "0.15.0"
