[package]
name = "scanner"
version = "0.1.0"
edition = "2024"

[dependencies]
toml = "0.8.23"
ipnet = "2.11.0"
md5 = "0.7.0"
postgres-types = { version = "0.2.9", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tokio-postgres = { version = "0.7.13", features = ["with-serde_json-1"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.17.0", features = ["v4"] }
rand = "0.9.1"
deadpool-postgres = "0.14.1"
futures = "0.3.31"
pin-utils = "0.1.0"
